Bug 472624 - "Mount and Open" action doesn't work
Summary: "Mount and Open" action doesn't work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-25 18:32 UTC by Nate Graham
Modified: 2023-09-06 20:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-07-25 18:32:29 UTC
STEPS TO REPRODUCE
1. Plug in a USB storage device
2. In Disks & Devices popup, click "Mount and open"


OBSERVED RESULT
Nothing happens


EXPECTED RESULT
The disk is mounted and opened in Dolphin


ADDITIONAL INFORMATION
Journal log says:

Jul 25 12:26:36 Liberator plasmashell[451395]: kf.service.services: The desktop entry file "/home/nate/kde/usr6/share/solid/actions/test-predicate-openinwindow.desktop" has Type= "Service" instead of "Application"
Jul 25 12:26:36 Liberator plasmashell[451395]: Failed to resolve hotplugjob action "test-predicate-openinwindow.desktop" "/home/nate/kde/usr6/share/solid/actions/test-predicate-openinwindow.desktop"
Comment 1 Kai Uwe Broulik 2023-08-04 12:03:35 UTC
KService rejects files of Type=Service now. I wouldn't want to have to change all the Solid device actions (which could come from 3rd parties or be user-generated) to be Type=Application (which I also think isn't really correct). So I guess the best bet is to port it to use KDesktopFile instead of KService to parse those.
Comment 2 Nate Graham 2023-08-04 17:32:07 UTC
Makes sense. I do see errors for other ones too:

Aug 04 11:30:03 Liberator plasmashell[7474]: kf.service.services: The desktop entry file "/home/nate/kde/usr6/share/solid/actions/gwenview_importer.desktop" has Type= "Service" instead of "Application"
Aug 04 11:30:03 Liberator plasmashell[7474]: kf.service.services: The desktop entry file "/home/nate/kde/usr6/share/solid/actions/open_in_partitionmanager.desktop" has Type= "Service" instead of "Application"
Comment 3 Nate Graham 2023-09-01 19:03:58 UTC
Git commit e1729db2df7f74fb7c28d27dc3942a79558e2c33 by Nate Graham.
Committed on 01/09/2023 at 21:02.
Pushed by ngraham into branch 'master'.

applets/devicenotifier: open filemanager with kde-open, not kde-open5

M  +1    -1    applets/devicenotifier/test-predicate-openinwindow.desktop

https://invent.kde.org/plasma/plasma-workspace/-/commit/e1729db2df7f74fb7c28d27dc3942a79558e2c33
Comment 4 Nate Graham 2023-09-01 19:15:52 UTC
Git commit aed214de28779fb70a19a6c9410c931f4e3b6c93 by Nate Graham.
Committed on 01/09/2023 at 21:13.
Pushed by ngraham into branch 'master'.

applets/devicenotifier: Rename test-predicate-openinwindow.desktop

We own this file and also own the code where it's called by name--in the
same repo, to boot! Therefore there's no reason why we can't give it a
more comprehensible name. So let's do it.

M  +1    -1    applets/devicenotifier/CMakeLists.txt
R  +0    -0    applets/devicenotifier/openWithFileManager.desktop [from: applets/devicenotifier/test-predicate-openinwindow.desktop - 100% similarity]
M  +2    -2    applets/devicenotifier/package/contents/ui/DeviceItem.qml
M  +3    -1    dataengines/hotplug/deviceserviceaction.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/aed214de28779fb70a19a6c9410c931f4e3b6c93
Comment 5 Bug Janitor Service 2023-09-01 22:50:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3241
Comment 6 Nate Graham 2023-09-06 20:11:16 UTC
Looks like this is already fixed by https://invent.kde.org/frameworks/kservice/-/commit/b32418a5601e9ffcb7594174d2f59d19bf43950f, which reverted the change that necessitated the merge request that I submitted.