Use KDesktopFile to parse Solid predicates, rather than KService

These files have "Type=Service" in them, which KService no longer
accepts in KF6. We could fix them, but then 3rd-party service files
would still be broken in Plasma 6. Not ideal.

Instead, let's use KDesktopFile to parse these files. All we're really
doing with them anyway is looking at the X-KDE-AliasFor=, Name=, and
Exec= keys; we're not making use of anything special that KService
offers. so it still works fine.

BUG: 472624