dataengines/hotplug/deviceserviceaction.h
@@ -1,13 +1,14 @@
 /*
     SPDX-FileCopyrightText: 2005 Jean-Remy Falleri <jr.falleri@laposte.net>
     SPDX-FileCopyrightText: 2005-2007 Kevin Ottens <ervin@kde.org>
+    SPDX-FileCopyrightText: 2023 Nate Graham <nate@kde.org>
 
     SPDX-License-Identifier: LGPL-2.0-only
 */
 
 #pragma once
 
-#include <kserviceaction.h>
+#include <KDesktopFile>
 #include <solid/predicate.h>
 
 class DeviceServiceAction
@@ -15,9 +16,9 @@ class DeviceServiceAction
 public:
     void execute(Solid::Device &device);
 
-    void setService(const KServiceAction &service);
-    KServiceAction service() const;
+    void setDesktopFile(const QString &filePath);
+    KDesktopFile *desktopFile() const;
 
 private:
-    KServiceAction m_service;
+    KDesktopFile *m_desktopFile;
 };
