dataengines/hotplug/hotplugjob.cpp
@@ -1,6 +1,7 @@
 /*
     SPDX-FileCopyrightText: 2011 Viranch Mehta <viranch.mehta@gmail.com>
     SPDX-FileCopyrightText: 2019 Harald Sitter <sitter@kde.org>
+    SPDX-FileCopyrightText: 2023 Nate Graham <nate@kde.org>
 
     SPDX-License-Identifier: LGPL-2.0-only
 */
@@ -9,9 +10,7 @@
 
 #include "deviceserviceaction.h"
 
-#include <KDesktopFileActions>
 #include <KLocalizedString>
-#include <KService>
 #include <Solid/Device>
 
 #include <QDebug>
@@ -23,19 +22,8 @@ void HotplugJob::start()
         const QString desktopFile = parameters()[QStringLiteral("predicate")].toString();
         const QString filePath = QStandardPaths::locate(QStandardPaths::GenericDataLocation, "solid/actions/" + desktopFile);
 
-        QList<KServiceAction> services = KDesktopFileActions::userDefinedServices(KService(filePath), true);
-        if (services.size() < 1) {
-            qWarning() << "Failed to resolve hotplugjob action" << desktopFile << filePath;
-            setError(KJob::UserDefinedError);
-            setErrorText(i18nc("error; %1 is the desktop file name of the service", "Failed to resolve service action for %1.", desktopFile));
-            setResult(false); // calls emitResult internally.
-            return;
-        }
-        // Cannot be > 1, we only have one filePath, and < 1 was handled as error.
-        Q_ASSERT(services.size() == 1);
-
         DeviceServiceAction action;
-        action.setService(services.takeFirst());
+        action.setDesktopFile(filePath);
 
         Solid::Device device(m_dest);
         action.execute(device);
